Fixed alignment bugs.

--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -9,17 +9,8 @@ h1 {
 	font-size: 50px;
 }
 
-p {
+p, a {
 	color: aquamarine;
-<<<<<<< HEAD
-	font-size: 16px
-}
-=======
-	text-align: center;
 	font-size: 16px;
+	text-align: center;
 }
-
-.center {
-	margin: 0 auto;
-}
->>>>>>> 0494a80109ac641ade35e8095e2d553ab1365641
